<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, BankMachineActivity! My App</string>
    <string name="app_name">Expense Tracker</string>
    <string name="displayAccountButton">Display Accounts</string>
    <string name="debitButton">Debit</string>
    <string name="setDatesButton">Set Widthrawal Dates</string>
    <string name="createAccount">Create Account</string>
    <string name="NamePrompt">Enter Name</string>
    <string name="AccountPrompt">Enter Account Name</string>
    <string name="ConfirmButton">Confirm</string>
    <string name="add">Add</string>
    <string name="subtract">Sub</string>
    <string name="menuDelete">Delete Accounts</string>
    <string name="billName">Name of Bill</string>
    <string name="amount">Amount</string>
    <string name="dateButton">Enter a Date</string>
    <string name="menuDelete2">Delete Widthdrawals</string>
    <string name="displayWidthdrawalButton">Display Widthdrawals</string>

</resources>